# evaluate-raylib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index.html  shell.html  track3d.js  track3d.wasm
bdr/: loop.h
collision_playground/: CMakeLists.txt  collisions.c  loop_runner.h
draw_text_rec/: CMakeLists.txt  draw_text_rec.c
samples/: CMakeLists.txt  config.h  controllers.h  empty.cpp  menu.cpp  menu.h  screens.cpp  screens.h  spaceship.cpp  track3d.cpp
samples/assets/terminal/: terminal.rgs
simple/: CMakeLists.txt  empty.c  empty.cpp  keypresses.c  loop.c  track3d.c
simple_c/: CMakeLists.txt
simple_cpp/: CMakeLists.txt  loop.cpp  track3d.cpp
spaced/: CMakeLists.txt  controls.c  menu.c  playing.c  spaced.c  spaced.h
spaceships/: CMakeLists.txt  advanced_spaceships.c  config.cpp  config.h  controller_selection.c  controllers.h  controls.c  menu.c  menu.cpp  menu.h  playing.c  playing.cpp  playing.h  spaceship.cpp  spaceships.c  spaceships.h
spaceships/bdr/: loop.h
spaceships_c/: CMakeLists.txt  constants.h  controller_selection.c  controller_selection.h  menu.c  menu.h  playing.c  playing.h  spaceships.c
tanks/: CMakeLists.txt  controls.c  draw_text_rec.h  menu.c  playing.c  tanks.c
